# emocean

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md
api/: AGENTS.md  package.json  pnpm-lock.yaml  schema.sql  vitest.config.js  wrangler.toml
api/src/: AGENTS.md  index.js  utils.js
api/tests/: AGENTS.md  api.test.js  utils.test.js
mcp/: AGENTS.md  README.md  emocean_server.py  pyproject.toml
sdk/: AGENTS.md  README.md
site/: AGENTS.md  README.md  package.json  pnpm-lock.yaml
site/public/: AGENTS.md
site/public/.well-known/skills/: index.json
site/public/.well-known/skills/emocean/: SKILL.md
site/src/: AGENTS.md
site/src/components/: AGENTS.md
site/src/components/ui/: AGENTS.md
site/src/layouts/: AGENTS.md  Layout.astro
site/src/lib/: AGENTS.md
site/src/pages/: AGENTS.md  index.astro
site/src/styles/: AGENTS.md  global.css
skills/: AGENTS.md
skills/emocean/: AGENTS.md  SKILL.md
