[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emocean-mcp"
version = "1.0.1"
description = "MCP server for Emocean - anonymous developer embers, glowing in the campfire"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "0xraghu", email = "raghu@pilan.ai" }
]
keywords = ["mcp", "emocean", "developer", "social", "anonymous", "campfire"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://emocean.dev"
Repository = "https://github.com/0xRaghu/emocean"
Documentation = "https://github.com/0xRaghu/emocean/tree/main/mcp"

[project.scripts]
emocean-mcp = "emocean_server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
